@@ -36,7 +36,7 @@
 #define RANDOM_TOPOLOGY            0
 #define DIAMOND_DOWN_TOPOLOGY      1
 #define DIAMOND_ARBITRARY_TOPOLOGY 2
-#define ZIGZAG_DIAMOND_TOPOLOGY    3
+#define DIAMOND_ZIGZAG_TOPOLOGY    3
 #define PURE_RING_TOPOLOGY         4
 #define RING_EDGE_TOPOLOGY         5
 #define BINARY_TREE_TOPOLOGY       6
